# Patent-Pathfinder

./: .dockerignore  .env.example  .env.lite.example  .gitignore  .wslconfig  Dockerfile  README.md  docker-compose.lite.yml  docker-compose.yml  pyproject.toml  run_all.bat
.github/workflows/: ci.yml  deploy.yml
backend/: requirements.txt
backend/app/: main.py  worker.py
backend/core/: config.py  dependencies.py  metrics.py  observability.py  security.py
backend/db/: alembic.ini  models.py  session.py
backend/ingestion/: lens_ingest.py  load_sample_data.py  parsers.py
backend/llm/: base.py  ollama_client.py  provider.py  vllm_client.py
backend/mcp_servers/: common.py
backend/models/: schemas.py
backend/services/: README_PATCH.txt  mcp_client.py  orchestration.py  patent_retrieval.py  reporting.py
backend/tests/: test_api.py  test_cpc_retrieval.py  test_lens_pipeline.py  test_lite_profile.py  test_llm_provider.py  test_mcp_servers.py  test_sample_warehouse_stockout.py
docs/: api-specs.md  architecture.md  lens-ingestion.md  mcp-specs.md  mode-switching.md
frontend/: package-lock.json  package.json
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  mcp-evidence.yaml  mcp-ingestion.yaml  mcp-monitoring.yaml  mcp-novelty.yaml  mcp-report.yaml  mcp-retrieval.yaml  namespace.yaml  secrets.yaml  vllm-deployment.yaml
k8s/lite/: mcp.yaml  (+6 more)
scripts/: bootstrap-lite.cmd  bootstrap-lite.ps1  bootstrap-lite.sh  ingest-lens.cmd  ingest-lens.ps1  smoke-test-lite.cmd  smoke-test-lite.ps1  smoke-test-lite.sh  switch-mode.cmd  switch-mode.ps1
(+48 files in other folders)
